--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,5 +47,15 @@
   {% else %}
   <meta property="og:image" content="" />
   {% endif %}
+
+  <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?6eb7ae0549b3412cffc9adb86fcca8fa";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
   
 </head>
