--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,16 +19,16 @@
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
- <link rel="stylesheet" href="/css/gh-fork-ribbon.min.css" />
+  <link rel="stylesheet" href="//{{ site.domain }}/static/css/gh-fork-ribbon.min.css" />
 <!--[if lt IE 9]>
-  <link rel="stylesheet" href="/css/gh-fork-ribbon.ie.min.css" />
+<link rel="stylesheet" href="//{{ site.domain }}/static/css/gh-fork-ribbon.ie.min.css" />
 <![endif]-->
 
-<link rel="stylesheet" href="//libs.cdnjs.net/font-awesome/4.0.3/css/font-awesome.min.css" />
-<link rel="stylesheet" href="/css/bootstrap.min.css" />
-<link rel="stylesheet" href="/css/main.css" />
-<link rel="stylesheet" href="/css_proxy?family=Lora:400,700,400italic,700italic" />
-<link rel="stylesheet" href="/css_proxy?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
+<link rel="stylesheet" href="//{{ site.domain }}/font-awesome/4.0.3/css/font-awesome.min.css" />
+<link rel="stylesheet" href="//{{ site.domain }}/static/css/bootstrap.min.css" />
+<link rel="stylesheet" href="//{{ site.domain }}/static/css/main.css" />
+<link rel="stylesheet" href="//{{ site.domain }}/css?family=Lora:400,700,400italic,700italic" />
+<link rel="stylesheet" href="//{{ site.domain }}/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
 
   <!-- Facebook OpenGraph tags -->
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
