--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,23 +12,24 @@
   {% endif %}
 
   <style>
-    .right-bottom .github-fork-ribbon {
+    .github-fork-ribbon.right-bottom:before {
         background-color: #090;
     }
   </style>
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
-  <link rel="stylesheet" href="/static/css/gh-fork-ribbon.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.css" />
+
 <!--[if lt IE 9]>
-<link rel="stylesheet" href="//{{ site.domain }}/static/css/gh-fork-ribbon.ie.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.0/gh-fork-ribbon.ie.min.css" />
 <![endif]-->
 
-<link rel="stylesheet" href="/font-awesome/4.0.3/css/font-awesome.min.css" />
-<link rel="stylesheet" href="/static/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 <link rel="stylesheet" href="/static/css/main.css" />
-<link rel="stylesheet" href="/css?family=Lora:400,700,400italic,700italic" />
-<link rel="stylesheet" href="/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" />
+<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" />
 
   <!-- Facebook OpenGraph tags -->
   <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
