--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -104,6 +104,5 @@
 
 <a class="github-fork-ribbon right-bottom fixed" href="https://github.com/ninjacn/ninjacn.github.io" title="Fork me on GitHub">Fork me on GitHub</a>
 
- <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+ <script src="/static/js/ninjacn.js"></script>
 </footer>
