--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,13 @@
 ---
 common-css:
-  - "/static/css/bootstrap.min.css"
-  - "/static/css/main.css"
+  - "/static/css/ninjacn.css"
 common-ext-css:
   - "/static/css/font-awesome.min.css"
 common-googlefonts:
   - "Lora:400,700,400italic,700italic"
   - "Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
 common-js:
-  - "/static/js/jquery-1.11.2.min.js"
-  - "/static/js/bootstrap.min.js"
-  - "/static/js/main.js"
+  - "/static/js/ninjacn.js"
 ---
 
 <!DOCTYPE html>
