用gulp管理静态资源

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -52,9 +52,9 @@ excerpt_separator: <!--more-->
 </div>
 
 {% if page.comments %}
-<div class="row disqus-comments">
+<div class="row disqus-comments hide">
   <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-    {% include disqus.html %}
+
   </div>
 </div>
 {% endif %}
